cmake_minimum_required (VERSION 2.8) 
project (raspicam_test)
set(raspicam_DIR "/usr/local/lib/cmake")
find_package(raspicam REQUIRED)
find_package(OpenCV REQUIRED)
add_executable (raspicam_test testingClass.cpp)  
target_link_libraries (raspicam_test ${raspicam_LIBS})
target_link_libraries (raspicam_test ${OpenCV_LIBS})
