cmake_minimum_required(VERSION 2.8.9)
set (CMAKE_CXX_STANDARD 11)
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
project (TestingSwitchandMotor)
set(WiringPi_DIR "/home/pi/wiringPi")
include_directories(${WIRINGPI_INCLUDE_DIRS})
add_executable(TestingSwitchandMotor MotorThread.cpp SwitchThread.cpp TestingSwitchandMotor.cpp)
find_package (Threads)
find_package(WiringPi REQUIRED)
target_link_libraries (TestingSwitchandMotor ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries (TestingSwitchandMotor ${WIRINGPI_LIBRARIES})
