cmake_minimum_required(VERSION 2.8.9)
set (CMAKE_CXX_STANDARD 11)
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
project (TestingAll)
set(WiringPi_DIR "/home/pi/wiringPi")
set(raspicam_DIR "/usr/local/lib/cmake")
include_directories(${WIRINGPI_INCLUDE_DIRS})
add_executable(TestingAll MotorThread.cpp SwitchThread.cpp TestingAll.cpp)
find_package (Threads)
find_package(WiringPi REQUIRED)
find_package(OpenCV REQUIRED)
find_package(raspicam REQUIRED)
target_link_libraries (TestingAll ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries (TestingAll ${WIRINGPI_LIBRARIES})
target_link_libraries (TestingAll ${raspicam_LIBS})
target_link_libraries (TestingAll ${OpenCV_LIBS})
